workloads/functions/functions.ns.yaml
---

apiVersion: v1
kind: Namespace

metadata:
  name: functions
  labels:
    istio-injection: enabled
