workloads/functions/debug.ksvc.yaml
---

apiVersion: serving.knative.dev/v1alpha1
kind: Service

metadata:
  name: debug
  namespace: functions
  labels:
    app.kubernetes.io/name: debug

spec:
  runLatest:
    configuration:
      revisionTemplate:
        metadata:
          labels:
            app.kubernetes.io/name: debug
          annotations:
            flux.weave.works/automated: "false"
        spec:
          container:
            image: mendhak/http-https-echo:latest
            ports:
              - name: http1
                containerPort: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: debug
  namespace: functions

spec:
  gateways: ["primary.istio-system"]
  hosts: ["fn.stevenxie.me"]
  http:
    - match:
        - uri:
            prefix: /debug
      rewrite:
        uri: /
        authority: debug.functions.external
      route:
        - destination:
            host: istio-ingressgateway.istio-system.svc.cluster.local
            port:
              number: 80
          headers:
            response:
              set:
                X-Service: debug
