workloads/functions/fn.vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: fn
  namespace: functions

spec:
  gateways: ["primary.istio-system"]
  hosts: ["fn.stevenxie.me"]
  http:
    - match:
        - uri:
            prefix: /hello
      rewrite:
        uri: /
        authority: hello.functions.external
      route:
        - destination:
            host: istio-ingressgateway.istio-system.svc.cluster.local
            port:
              number: 80
          headers:
            response:
              set:
                X-Service: hello
