workloads/functions/http-debug.ksvc.yaml
---

apiVersion: serving.knative.dev/v1alpha1
kind: Service

metadata:
  name: http-debug
  namespace: functions
  labels:
    app.kubernetes.io/name: http-debug

spec:
  runLatest:
    configuration:
      revisionTemplate:
        metadata:
          labels:
            app.kubernetes.io/name: http-debug
          annotations:
            flux.weave.works/automated: "false"
        spec:
          container:
            image: mendhak/http-https-echo:latest
            ports:
              - name: http1
                containerPort: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: http-debug
  namespace: functions

spec:
  gateways: ["primary.istio-system"]
  hosts: ["fn.stevenxie.me"]
  http:
    - match:
        - uri:
            exact: /debug
      redirect:
        uri: /debug/
    - match:
        - uri:
            prefix: /debug/
      rewrite:
        uri: /
        authority: http-debug.functions.external
      route:
        - destination:
            host: istio-ingressgateway.istio-system.svc.cluster.local
            port:
              number: 80
          headers:
            response:
              set:
                X-Service: http-debug
